; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/code940/extr_mp3test.c_simpleWait.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/code940/extr_mp3test.c_simpleWait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @simpleWait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @simpleWait(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.timeval, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = call i32 @spend_cycles(i32 1024)
  %7 = call i32 @gettimeofday(%struct.timeval* %5, i32 0)
  %8 = load i32, i32* %3, align 4
  %9 = getelementptr inbounds %struct.timeval, %struct.timeval* %5, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %8, %10
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = getelementptr inbounds %struct.timeval, %struct.timeval* %5, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = add nsw i32 %14, 1000000
  store i32 %15, i32* %13, align 4
  br label %16

16:                                               ; preds = %12, %2
  br label %17

17:                                               ; preds = %33, %16
  %18 = getelementptr inbounds %struct.timeval, %struct.timeval* %5, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %4, align 4
  %21 = icmp slt i32 %19, %20
  br i1 %21, label %22, label %34

22:                                               ; preds = %17
  %23 = call i32 @spend_cycles(i32 1024)
  %24 = call i32 @gettimeofday(%struct.timeval* %5, i32 0)
  %25 = load i32, i32* %3, align 4
  %26 = getelementptr inbounds %struct.timeval, %struct.timeval* %5, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = icmp ne i32 %25, %27
  br i1 %28, label %29, label %33

29:                                               ; preds = %22
  %30 = getelementptr inbounds %struct.timeval, %struct.timeval* %5, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = add nsw i32 %31, 1000000
  store i32 %32, i32* %30, align 4
  br label %33

33:                                               ; preds = %29, %22
  br label %17

34:                                               ; preds = %17
  ret void
}

declare dso_local i32 @spend_cycles(i32) #1

declare dso_local i32 @gettimeofday(%struct.timeval*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
